--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopify-graphql-client",
+  "name": "@andvea/shopify-graphql-client",
   "version": "1.0.0",
   "description": "",
   "main": "",
