--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@andvea/shopify-graphql-client",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "",
   "main": "ShopifyGraphQL.js",
   "files": [
@@ -16,21 +16,17 @@
     "type": "git",
     "url": "git+https://github.com/andvea/shopify-graphql-client.git"
   },
-  "author": "",
+  "author": "Andrea Polverino (https://github.com/andvea)",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/andvea/shopify-graphql-client/issues"
   },
   "homepage": "https://github.com/andvea/shopify-graphql-client#readme",
-  "dependencies": {
-    "node-fetch": "^3.2.4"
-  },
   "devDependencies": {
     "dotenv": "^16.0.2",
     "eslint": "^8.39.0",
     "eslint-config-google": "^0.14.0",
-    "mocha": "9.2.1",
-    "node-fetch": "^3.2.4",
+    "mocha": "9.2.2",
     "supertest": "6.2.2"
   }
 }
