--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - name: Lint code
-      run: npx eslint shopifyGraphQL.js
+      run: npx eslint ShopifyGraphQL.js
     - run: mocha
