Fix command for mocha

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,4 +17,4 @@ jobs:
     - run: npm install
     - name: Lint code
       run: npx eslint ShopifyGraphQL.js
-    - run: mocha
+    - run: npx mocha
