--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,4 +17,8 @@ jobs:
     - run: npm install
     - name: Lint code
       run: npx eslint ShopifyGraphQL.js
-    - run: npx mocha
+    - name: Run tests
+        env:
+          SHOP_MYSHOPIFY_DOMAIN: ${{ secrets.SHOP_MYSHOPIFY_DOMAIN }}
+          SHOP_API_KEY: ${{ secrets.SHOP_API_KEY }}
+        run: npx mocha
