--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@andvea/shopify-graphql-client",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "",
   "main": "ShopifyGraphQL.js",
   "files": [
@@ -10,7 +10,7 @@
   ],
   "type": "module",
   "scripts": {
-    "test": "npm install;npx eslint shopifyGraphQL.js;mocha"
+    "test": "npm install;npx eslint shopifyGraphQL.js;mocha --recursive"
   },
   "repository": {
     "type": "git",
